--- a/Toyota vallejo/Cube.html
+++ b/Toyota vallejo/Cube.html
@@ -823,7 +823,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/JHiGA7o.png"/>
 <!--#/#--><!--#i4.i192.image.html:image/html-->
-<img id="i192" src="https://i.imgur.com/QxSbUrl.png"/>
+<img id="i192" src="https://i.imgur.com/TFdMR4H.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -837,7 +837,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i184.image.html:image/html-->
 <img id="i184" src="https://i.imgur.com/JHiGA7o.png"/>
 <!--#/#--><!--#i5.i190.image.html:image/html-->
-<img id="i190" src="https://i.imgur.com/QxSbUrl.png"/>
+<img id="i190" src="https://i.imgur.com/TFdMR4H.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -853,7 +853,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i186.image.html:image/html-->
 <img id="i186" src="https://i.imgur.com/JHiGA7o.png"/>
 <!--#/#--><!--#i6.i188.image.html:image/html-->
-<img id="i188" src="https://i.imgur.com/QxSbUrl.png"/>
+<img id="i188" src="https://i.imgur.com/TFdMR4H.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -909,7 +909,7 @@ bmShow('i192');
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/eFzV5jkFPft'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.toyotavallejo.com.mx/PruebadeManejo/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
@@ -927,7 +927,7 @@ var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i194.i195.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/eFzV5jkFPft'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.toyotavallejo.com.mx/PruebadeManejo/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -942,7 +942,7 @@ bmShow('i190');
 /* Name: On Click; */
 document.getElementById('i5').addEventListener('click', function(e){
     /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/eFzV5jkFPft'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.toyotavallejo.com.mx/PruebadeManejo/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i60.image.js:image/base/js*/
@@ -955,7 +955,7 @@ bmShow('i186');
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/eFzV5jkFPft'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.toyotavallejo.com.mx/PruebadeManejo/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i188.image.js:image/base/js*/
