--- a/Toyota vallejo/Cube2.html
+++ b/Toyota vallejo/Cube2.html
@@ -774,7 +774,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/6rEx1XQ.jpg"/>
 <!--#/#--><!--#i4.i376.image.html:image/html-->
-<img id="i376" src="https://i.imgur.com/QxSbUrl.png"/>
+<img id="i376" src="https://i.imgur.com/TFdMR4H.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -788,7 +788,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i378.image.html:image/html-->
 <img id="i378" src="https://i.imgur.com/JHiGA7o.png"/>
 <!--#/#--><!--#i5.i382.image.html:image/html-->
-<img id="i382" src="https://i.imgur.com/QxSbUrl.png"/>
+<img id="i382" src="https://i.imgur.com/TFdMR4H.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -800,7 +800,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i338.image.html:image/html-->
 <img id="i338" src="https://i.imgur.com/if4aOCM.png"/>
 <!--#/#--><!--#i6.i334.image.html:image/html-->
-<img id="i334" src="https://i.imgur.com/QxSbUrl.png"/>
+<img id="i334" src="https://i.imgur.com/TFdMR4H.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -854,7 +854,7 @@ var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
     /*#i374.i375.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/eFzV5jkFPft'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.toyotavallejo.com.mx/PruebadeManejo/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -882,7 +882,7 @@ var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i380.i381.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/eFzV5jkFPft'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.toyotavallejo.com.mx/PruebadeManejo/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -906,7 +906,7 @@ var el = document.getElementById('i99');
 
 el.addEventListener('click', function(e){
     /*#i372.i373.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/eFzV5jkFPft'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.toyotavallejo.com.mx/PruebadeManejo/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
