--- a/Toyota vallejo/FadeBig2.html
+++ b/Toyota vallejo/FadeBig2.html
@@ -337,14 +337,14 @@
     </style>
     <script>
         function openUrl() {
-            window.open("http://www.toyotavallejo.com.mx/");
+            window.open("http://www.toyotavallejo.com.mx/PruebadeManejo/");
         }
     </script>
 </head>
 
 <body class="tgx">
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
-        <div class="cta"><img src="https://i.imgur.com/avTnDqs.png" style="height: 45px;"></div>
+        <div class="cta"><img src="https://i.imgur.com/TFdMR4H.png" style="height: 45px;"></div>
        
         <div class="tgx_cover bg cover-1 carousel-item item-1">
             <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small"></span></div>
