--- a/US auto/FadeGeo300x600.html
+++ b/US auto/FadeGeo300x600.html
@@ -412,7 +412,7 @@
                 <div  class="map">
                 
 
-                    <span> <a href="https://goo.gl/maps/QxkyVU3G5A92" target="_blank" >  <img src="https://i.imgur.com/L3vMLqu.png"></a> </span>
+                    <span> <a href="https://goo.gl/maps/qrvgNiZXJK52" target="_blank" >  <img src="https://i.imgur.com/3aGIBaJ.png"></a> </span>
         </div>
 
                  
