--- a/Juguetrón Lego/FijoCompleto1.html
+++ b/Juguetrón Lego/FijoCompleto1.html
@@ -100,7 +100,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/AFAJRMe.png");
+            background: url("https://i.imgur.com/0AeX3Fj.jpg");
             background-size: cover;
         }
 
