--- a/Juguetrón Lego/FijoPeq2.html
+++ b/Juguetrón Lego/FijoPeq2.html
@@ -99,7 +99,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/cEIgOL0.png");
+            background: url("https://i.imgur.com/sgygNQs.jpg");
             background-size: cover;
         }
 
