--- a/Juguetrón Lego/FijoPeq2.html
+++ b/Juguetrón Lego/FijoPeq2.html
@@ -3,44 +3,6 @@
 
 <head>
 
-     <!-- Adform API Script -->
-    <script type="text/javascript">
-        document.write('<script src="' + (window.API_URL || 'https://s1.adform.net/banners/scripts/rmb/Adform.DHTML.js?bv=' + Math.random()) + '"><\/script>');
-    </script>
-    
-    <!--Adform Global Clicktag START-->
-    <script type="text/javascript">
-        function adfOpenGlobalClickTAG() {
-            var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://lego.juguetron.mx/';
-
-            window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
-        }
-        if (window.addEventListener) {
-            window.addEventListener('click', function(e) {
-                if (e.button !== 0) return;
-                e.stopPropagation();
-                e.preventDefault();
-                adfOpenGlobalClickTAG();
-            }, true);
-        } else {
-            document.attachEvent('onclick', function() {
-                adfOpenGlobalClickTAG();
-            });
-        }
-
-        window.onload = function() {
-            dhtml.sendEvent('1', 'PageView', 'PageView');
-        }
-
-        window.onclick = function() {
-            dhtml.sendEvent('9', 'Click Out', 'Click Out');
-        }
-
-        /*document.getElementById('housell').addEventListener('click', function(e){
-            window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', '%%c1;cpdir='), dhtml.getVar('landingPageTarget', '_blank'));
-        });*/
-    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -306,7 +268,7 @@
 </head>
 
 <body class="value">
-     <a href="%%c1;cpdir="  target="_blank">
+     <a href="https://lego.juguetron.mx/"  target="_blank">
     <div class="value_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
        
         <div class="value_cover bg cover-1 carousel-item item-1">
