--- a/JUEGUETRON ALWAYS ON/banner_300x600_01.html
+++ b/JUEGUETRON ALWAYS ON/banner_300x600_01.html
@@ -142,13 +142,13 @@ a {text-decoration: none;}
 
 </head>
 <body class="zoom" style="margin:0px;">
- <a href="https://www.juguetron.mx/tiendas/buscador">
+ <a href="https://www.juguetron.mx/tiendas/buscador" target="_Blank">
      <div class="wrapper size_300x250">
          
         
    
 
-<div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 430px; border-radius: none;cursor: pointer;">
+<div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 600px; border-radius: none;cursor: pointer;">
   <ol>
     <li>
       <img src="https://i.imgur.com/FORRj0B.jpg"></li>
