--- a/Juguetrón Lego/FijoCompleto1.html
+++ b/Juguetrón Lego/FijoCompleto1.html
@@ -63,7 +63,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/0AeX3Fj.jpg");
+            background: url("https://i.imgur.com/AUM4vgN.jpg");
             background-size: cover;
         }
 
