--- a/JUEGUETRON ALWAYS ON/banner_728x90_02.html
+++ b/JUEGUETRON ALWAYS ON/banner_728x90_02.html
@@ -96,7 +96,7 @@
 
         .bg.cover-1 {
             
-            background: url("https://i.imgur.com/3AOd2Q6.jpg");
+            background: url("https://i.imgur.com/Wn8lZHt.jpg");
             background-size: cover;
         }
 
@@ -300,7 +300,7 @@
         <a href="https://www.juguetron.mx/tiendas/buscador" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                 <div class="te-images"> 
-                <img src="https://i.imgur.com/3AOd2Q6.jpg" alt="" /> 
+                <img src="https://i.imgur.com/Wn8lZHt.jpg" alt="" /> 
                  </div>
             
                 <div class="te-transition">
