--- a/JUEGUETRON ALWAYS ON/banner_300x250_01.html
+++ b/JUEGUETRON ALWAYS ON/banner_300x250_01.html
@@ -201,7 +201,7 @@
         <a href="https://www.juguetron.mx/tiendas/buscador" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                 <div class="te-images"> 
-                <img src="https://i.imgur.com/yqT8lv5.jpg" alt="" /> 
+                <img src="https://i.imgur.com/OdGJ8vM.jpg" alt="" /> 
                  </div>
             
                 <div class="te-transition">
