--- a/JUEGUETRON ALWAYS ON/banner_300x600_01.html
+++ b/JUEGUETRON ALWAYS ON/banner_300x600_01.html
@@ -151,7 +151,7 @@ a {text-decoration: none;}
 <div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 600px; border-radius: none;cursor: pointer;">
   <ol>
     <li>
-      <img src="https://i.imgur.com/FORRj0B.jpg"></li>
+      <img src="https://i.imgur.com/ebCphKl.jpg"></li>
       
    
       
