--- a/Juguetron 3x2/gif/fijogif.html
+++ b/Juguetron 3x2/gif/fijogif.html
@@ -59,11 +59,11 @@
         .tgx_cover {
             position: relative;
             width: 100%;
-            height: 60%;
+            height: 70%;
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/FiKM8WP.gif");
+            background: url("https://i.imgur.com/RCDTAcV.gif");
             background-size: cover;
         }
 
