--- a/Juguetron 3x2/gif/fijogifpeq.html
+++ b/Juguetron 3x2/gif/fijogifpeq.html
@@ -69,11 +69,11 @@
         }
 
         .corona .bzm_cover {
-            height: 150px
+            height: 165px
         }
 
         .corona .bg.cover-1 {
-            background-image: url(https://i.imgur.com/nR0ezIO.gif)
+            background-image: url(https://i.imgur.com/9PIJuss.gif)
         }
 
        
@@ -108,7 +108,7 @@
             line-height: 1.1;
             color: #000;
             text-align: center;
-            margin-top: 5px;
+            margin-top: 10px;
             width: 99%;
             
         }
@@ -243,7 +243,7 @@
             <div class="bzm_text"> <span class="bzm_text_title bzm_text" style="color:#000;line-height:1;font-size:19px;text-align:center;">3x2 en minifiguras coleccionables. ¡Sólo hasta el 21 de Abril!</span></div>
 
 
-            <div style="bottom:0px;height:33px;text-align:center;"><a href="https://www.juguetron.mx/blog/2019-04-15-3x2" target="_blank"> <img src="https://i.imgur.com/feoMmrj.jpg" style="height:33px;margin-top:12px;"></a>
+            <div style="bottom:0px;height:33px;text-align:center;"><a href="https://www.juguetron.mx/blog/2019-04-15-3x2" target="_blank"> <img src="https://i.imgur.com/feoMmrj.jpg" style="height:34px;margin-top:17px;"></a>
 
                  <!--<div id="botones-para-compartir" style="display:inline;float:left;margin-left:10px;margin-top:-25px;">
                     <span>  
@@ -264,7 +264,7 @@
         </a>
     </div>
 
-    <!--<div class="EurowingsFade"></div>
+   <div class="EurowingsFade"></div>
 	<script src="bundle.js"></script>
 	<script>
 		EurowingsFade.show('EurowingsFade')
