--- a/Pikolinos/ZoomExp300x600-NL.html
+++ b/Pikolinos/ZoomExp300x600-NL.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://www.pikolinos.com/be-fr';
+                adfClickTAGUrl = 'https://www.pikolinos.com/be-nl';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
@@ -210,7 +210,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Trebuchet MS; color:#000000; font-size:24px;  text-decoration: none;"><b>La vie est intense... <br>Adoptez le confort!</b></span><br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Trebuchet MS; color:#000000; font-size:24px;  text-decoration: none;"><b>Het leven is intens...  <br>Kies voor comfort!</b></span><br>
 
    <span class="ism_text ism_text_medium" style="color:#000000; font-size:16px;  text-decoration: none; "><p  style="text-align: justify; width: 92%; margin-left: 15px; margin-top: -15px;">  </p></span>
                    
