--- a/Deichmann/Statics/ZoomExp300x600.html
+++ b/Deichmann/Statics/ZoomExp300x600.html
@@ -168,7 +168,7 @@ a {text-decoration: none;}
 
  	 <div class="wrapper size_300x250">
          
-         <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:90%; color: white; font-family: Trebuchet MS;">Ver ahora en PrimeVideo.com </span></div>
+         <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:90%; color: white; font-family: Trebuchet MS;">Compra agora!</span></div>
    
 <div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 430px; border-radius: none;">
   <ol>
@@ -182,8 +182,8 @@ a {text-decoration: none;}
   
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:24px; text-decoration: none;"> <br> #Spreadthelook</span><br>
-     <span class="ism_text ism_text_medium" style="color:#000000; font-size:18px;  text-decoration: none; "><p  style="text-align: justify; width: 92%; margin-left: 15px; margin-top: -15px;"> Disfruta The Tick, American Gods, The Grand Tour y muchos más donde y cuando quieras. </p></span>
+ <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:24px; text-decoration: none;"> Coleção <br> #Spreadthelook</span><br>
+     <span class="ism_text ism_text_medium" style="color:#000000; font-size:18px;  text-decoration: none; "><p  style="text-align: justify; width: 92%; margin-left: 15px; margin-top: -15px;"> As tendências das mãos das influencers para este verão 19.  </p></span>
                  
                  <span class="ism_text_bold" style="color: blue;line-height:1em; font-size:16px; width:95%; text-align:left;">
                         <p style=" line-height: 1em; margin-left: 15px; margin-top: -3px;">
