--- a/Amazon Prime/Cube.html
+++ b/Amazon Prime/Cube.html
@@ -1023,7 +1023,7 @@ bmShow('i398');
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i406.image.js:image/base/js*/
@@ -1036,7 +1036,7 @@ var el = document.getElementById('i406');
 
 el.addEventListener('click', function(e){
     /*#i408.i409.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.amazon.com.mx/amazonprime?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1053,7 +1053,7 @@ var el = document.getElementById('i414');
 
 el.addEventListener('click', function(e){
     /*#i416.i417.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.amazon.com.mx/amazonprime?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1070,7 +1070,7 @@ var el = document.getElementById('i422');
 
 el.addEventListener('click', function(e){
     /*#i424.i425.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.amazon.com.mx/amazonprime?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1094,7 +1094,7 @@ bmShow('i430');
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
     /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i5.i402.image.js:image/base/js*/
@@ -1107,7 +1107,7 @@ var el = document.getElementById('i402');
 
 el.addEventListener('click', function(e){
     /*#i404.i405.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.amazon.com.mx/amazonprime?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1124,7 +1124,7 @@ var el = document.getElementById('i410');
 
 el.addEventListener('click', function(e){
     /*#i412.i413.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.amazon.com.mx/amazonprime?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1141,7 +1141,7 @@ var el = document.getElementById('i418');
 
 el.addEventListener('click', function(e){
     /*#i420.i421.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.amazon.com.mx/amazonprime?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1167,7 +1167,7 @@ bmShow('i400');
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i340.image.js:image/base/js*/
@@ -1180,7 +1180,7 @@ var el = document.getElementById('i340');
 
 el.addEventListener('click', function(e){
     /*#i342.i343.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.amazon.com.mx/amazonprime?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1197,7 +1197,7 @@ var el = document.getElementById('i348');
 
 el.addEventListener('click', function(e){
     /*#i350.i351.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.amazon.com.mx/amazonprime?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1214,7 +1214,7 @@ var el = document.getElementById('i356');
 
 el.addEventListener('click', function(e){
     /*#i358.i359.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.amazon.com.mx/amazonprime?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
