--- a/Amazon Prime/ZoomExp300x600.html
+++ b/Amazon Prime/ZoomExp300x600.html
@@ -164,13 +164,13 @@ a {text-decoration: none;}
 
 <body class="zoom" style="margin:0px;">
 
-    <a href="https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn" target="_blank">
+    <a href="https://www.amazon.com.mx/amazonprime?_encoding=UTF8&ref_=nav_prime_try_btn" target="_blank" cursor="pointer">
 
  	 <div class="wrapper size_300x250">
          
          <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:70%; color: white; font-family: Trebuchet MS;">Ver ahora en PrimeVideo.com </span></div>
    
-<div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 430px; border-radius: none;">
+<div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 430px; border-radius: none; cursor: pointer;">
   <ol>
     <li>
       <img src="https://i.imgur.com/PFBOA4S.png">
