--- a/NELSON VARGAS/cubo.html
+++ b/NELSON VARGAS/cubo.html
@@ -688,11 +688,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(175px, 221px) rotate(0deg);
 }
 /*#/#*//*#i396.i397.positioning.css:positioning/base/css.2*/
-#i396 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 162px; height: 43px;
-        -ms-transform: translate(0, 0) translate(70px, 135px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(70px, 135px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(70px, 135px) rotate(0deg);
-        transform: translate(0, 0) translate(70px, 135px) rotate(0deg);
+#i396 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 165px; height: 44px;
+        -ms-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
+        transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
 }
 /*#/#*//*#i5.i336.image.css:image/base/css*/
 #i336 { opacity: 1; }
@@ -712,14 +712,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
         transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
 }
-/*#/#*//*#i5.i398.image.css:image/base/css*/
-#i398 { opacity: 1; }
-/*#/#*//*#i398.i399.positioning.css:positioning/base/css.2*/
-#i398 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 162px; height: 43px;
-        -ms-transform: translate(0, 0) translate(68px, 135px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(68px, 135px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(68px, 135px) rotate(0deg);
-        transform: translate(0, 0) translate(68px, 135px) rotate(0deg);
+/*#/#*//*#i5.i402.image.css:image/base/css*/
+#i402 { opacity: 1; }
+/*#/#*//*#i402.i403.positioning.css:positioning/base/css.2*/
+#i402 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 165px; height: 44px;
+        -ms-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
+        transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
 }
 /*#/#*//*#i5.i388.image.css:image/base/css*/
 #i388 { opacity: 1; }
@@ -779,14 +779,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(175px, 221px) rotate(0deg);
         transform: translate(0, 0) translate(175px, 221px) rotate(0deg);
 }
-/*#/#*//*#i6.i400.image.css:image/base/css*/
-#i400 { opacity: 1; }
-/*#/#*//*#i400.i401.positioning.css:positioning/base/css.2*/
-#i400 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 162px; height: 43px;
-        -ms-transform: translate(0, 0) translate(70px, 135px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(70px, 135px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(70px, 135px) rotate(0deg);
-        transform: translate(0, 0) translate(70px, 135px) rotate(0deg);
+/*#/#*//*#i6.i404.image.css:image/base/css*/
+#i404 { opacity: 1; }
+/*#/#*//*#i404.i405.positioning.css:positioning/base/css.2*/
+#i404 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 165px; height: 44px;
+        -ms-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
+        transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -838,7 +838,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i390.image.html:image/html-->
 <img id="i390" src="https://i.imgur.com/MX7irDr.png"/>
 <!--#/#--><!--#i4.i396.image.html:image/html-->
-<img id="i396" src="https://i.imgur.com/giwwrLE.png"/>
+<img id="i396" src="https://i.imgur.com/HNsWaWo.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -852,8 +852,8 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i5.i278.text.html:text/html-->
 <div id="i278">VENTA EXTREMA
 desde el 13 de Mayo al 5 de Junio.</div>
-<!--#/#--><!--#i5.i398.image.html:image/html-->
-<img id="i398" src="https://i.imgur.com/giwwrLE.png"/>
+<!--#/#--><!--#i5.i402.image.html:image/html-->
+<img id="i402" src="https://i.imgur.com/HNsWaWo.png"/>
 <!--#/#--><!--#i5.i388.image.html:image/html-->
 <img id="i388" src="https://i.imgur.com/MX7irDr.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
@@ -870,8 +870,8 @@ desde el 13 de Mayo al 5 de Junio.</div>
 <img id="i338" src="https://i.imgur.com/bU241SW.jpg"/>
 <!--#/#--><!--#i6.i392.image.html:image/html-->
 <img id="i392" src="https://i.imgur.com/MX7irDr.png"/>
-<!--#/#--><!--#i6.i400.image.html:image/html-->
-<img id="i400" src="https://i.imgur.com/giwwrLE.png"/>
+<!--#/#--><!--#i6.i404.image.html:image/html-->
+<img id="i404" src="https://i.imgur.com/HNsWaWo.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -944,10 +944,10 @@ if ('click' === 'click') {
  
 /*#/#*//*#i5.i336.image.js:image/base/js*/
 
-/*#/#*//*#i5.i398.image.js:image/base/js*/
+/*#/#*//*#i5.i402.image.js:image/base/js*/
 
-/*#/#*//*#i398.i399.positioning.js:positioning/base/js.2*/
-bmShow('i398');
+/*#/#*//*#i402.i403.positioning.js:positioning/base/js.2*/
+bmShow('i402');
 /*#/#*//*#i5.i388.image.js:image/base/js*/
 
 /*#/#*//*#i388.i389.positioning.js:positioning/base/js.2*/
@@ -976,10 +976,10 @@ if ('click' === 'click') {
 
 /*#/#*//*#i392.i393.positioning.js:positioning/base/js.2*/
 bmShow('i392');
-/*#/#*//*#i6.i400.image.js:image/base/js*/
+/*#/#*//*#i6.i404.image.js:image/base/js*/
 
-/*#/#*//*#i400.i401.positioning.js:positioning/base/js.2*/
-bmShow('i400');
+/*#/#*//*#i404.i405.positioning.js:positioning/base/js.2*/
+bmShow('i404');
 /*#/#*//*#i99.i394.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i99');
@@ -1044,7 +1044,7 @@ customName: 1;
 /*#/#*//*#i390.i391.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i396.image.meta:image/meta*/
-name: giwwrLE.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: HNsWaWo.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i396.i397.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1067,10 +1067,10 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Texto; customName: 1;
 /*#/#*//*#i278.i279.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i398.image.meta:image/meta*/
-name: giwwrLE.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+/*#/#*//*#i5.i402.image.meta:image/meta*/
+name: HNsWaWo.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
-/*#/#*//*#i398.i399.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i402.i403.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i388.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
@@ -1101,10 +1101,10 @@ name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i392.i393.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i400.image.meta:image/meta*/
-name: giwwrLE.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+/*#/#*//*#i6.i404.image.meta:image/meta*/
+name: HNsWaWo.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
-/*#/#*//*#i400.i401.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i404.i405.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
