--- a/NELSON VARGAS/cubo.html
+++ b/NELSON VARGAS/cubo.html
@@ -511,10 +511,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 18px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 229px; height: 63px;
-        -ms-transform: translate(-50%, -50%) translate(3px, 90px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(3px, 90px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(3px, 90px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(3px, 90px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(3px, 87px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(3px, 87px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(3px, 87px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(3px, 87px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -682,17 +682,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 
 /*#/#*//*#i390.i391.positioning.css:positioning/base/css.2*/
 #i390 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 119px; height: 22px;
-        -ms-transform: translate(0, 0) translate(175px, 221px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(175px, 221px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(175px, 221px) rotate(0deg);
-        transform: translate(0, 0) translate(175px, 221px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(175px, 223px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(175px, 223px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(175px, 223px) rotate(0deg);
+        transform: translate(0, 0) translate(175px, 223px) rotate(0deg);
 }
 /*#/#*//*#i396.i397.positioning.css:positioning/base/css.2*/
-#i396 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 165px; height: 44px;
-        -ms-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
-        transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
+#i396 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 169px; height: 45px;
+        -ms-transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
+        transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
 }
 /*#/#*//*#i5.i336.image.css:image/base/css*/
 #i336 { opacity: 1; }
@@ -707,28 +707,19 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i278 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 18px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i278.i279.positioning.css:positioning/base/css.1*/
 #i278 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 53px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
-}
-/*#/#*//*#i5.i402.image.css:image/base/css*/
-#i402 { opacity: 1; }
-/*#/#*//*#i402.i403.positioning.css:positioning/base/css.2*/
-#i402 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 165px; height: 44px;
-        -ms-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
-        transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
 }
 /*#/#*//*#i5.i388.image.css:image/base/css*/
 #i388 { opacity: 1; }
 /*#/#*//*#i388.i389.positioning.css:positioning/base/css.2*/
 #i388 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 119px; height: 22px;
-        -ms-transform: translate(0, 0) translate(175px, 221px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(175px, 221px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(175px, 221px) rotate(0deg);
-        transform: translate(0, 0) translate(175px, 221px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(175px, 223px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(175px, 223px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(175px, 223px) rotate(0deg);
+        transform: translate(0, 0) translate(175px, 223px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -739,6 +730,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i5.i406.image.css:image/base/css*/
+#i406 { opacity: 1; }
+/*#/#*//*#i406.i407.positioning.css:positioning/base/css.2*/
+#i406 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 169px; height: 45px;
+        -ms-transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
+        transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -756,10 +756,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i196 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 18px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i196.i197.positioning.css:positioning/base/css.1*/
 #i196 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 269px; height: 54px;
-        -ms-transform: translate(-50%, -50%) translate(1px, 82px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(1px, 82px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(1px, 82px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(1px, 82px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(1px, 83px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(1px, 83px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(1px, 83px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(1px, 83px) rotate(0deg);
 }
 /*#/#*//*#i6.i338.image.css:image/base/css*/
 #i338 { opacity: 1; }
@@ -774,19 +774,19 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i392 { opacity: 1; }
 /*#/#*//*#i392.i393.positioning.css:positioning/base/css.2*/
 #i392 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 119px; height: 22px;
-        -ms-transform: translate(0, 0) translate(175px, 221px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(175px, 221px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(175px, 221px) rotate(0deg);
-        transform: translate(0, 0) translate(175px, 221px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(175px, 223px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(175px, 223px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(175px, 223px) rotate(0deg);
+        transform: translate(0, 0) translate(175px, 223px) rotate(0deg);
 }
-/*#/#*//*#i6.i404.image.css:image/base/css*/
-#i404 { opacity: 1; }
-/*#/#*//*#i404.i405.positioning.css:positioning/base/css.2*/
-#i404 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 165px; height: 44px;
-        -ms-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
-        transform: translate(0, 0) translate(66px, 135px) rotate(0deg);
+/*#/#*//*#i6.i408.image.css:image/base/css*/
+#i408 { opacity: 1; }
+/*#/#*//*#i408.i409.positioning.css:positioning/base/css.2*/
+#i408 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 169px; height: 45px;
+        -ms-transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
+        transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -838,7 +838,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i390.image.html:image/html-->
 <img id="i390" src="https://i.imgur.com/MX7irDr.png"/>
 <!--#/#--><!--#i4.i396.image.html:image/html-->
-<img id="i396" src="https://i.imgur.com/HNsWaWo.png"/>
+<img id="i396" src="https://i.imgur.com/huv2i9Y.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -852,12 +852,12 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i5.i278.text.html:text/html-->
 <div id="i278">VENTA EXTREMA
 desde el 13 de Mayo al 5 de Junio.</div>
-<!--#/#--><!--#i5.i402.image.html:image/html-->
-<img id="i402" src="https://i.imgur.com/HNsWaWo.png"/>
 <!--#/#--><!--#i5.i388.image.html:image/html-->
 <img id="i388" src="https://i.imgur.com/MX7irDr.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
+<!--#/#--><!--#i5.i406.image.html:image/html-->
+<img id="i406" src="https://i.imgur.com/huv2i9Y.png"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
@@ -870,8 +870,8 @@ desde el 13 de Mayo al 5 de Junio.</div>
 <img id="i338" src="https://i.imgur.com/bU241SW.jpg"/>
 <!--#/#--><!--#i6.i392.image.html:image/html-->
 <img id="i392" src="https://i.imgur.com/MX7irDr.png"/>
-<!--#/#--><!--#i6.i404.image.html:image/html-->
-<img id="i404" src="https://i.imgur.com/HNsWaWo.png"/>
+<!--#/#--><!--#i6.i408.image.html:image/html-->
+<img id="i408" src="https://i.imgur.com/huv2i9Y.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -944,10 +944,6 @@ if ('click' === 'click') {
  
 /*#/#*//*#i5.i336.image.js:image/base/js*/
 
-/*#/#*//*#i5.i402.image.js:image/base/js*/
-
-/*#/#*//*#i402.i403.positioning.js:positioning/base/js.2*/
-bmShow('i402');
 /*#/#*//*#i5.i388.image.js:image/base/js*/
 
 /*#/#*//*#i388.i389.positioning.js:positioning/base/js.2*/
@@ -965,6 +961,10 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i5.i406.image.js:image/base/js*/
+
+/*#/#*//*#i406.i407.positioning.js:positioning/base/js.2*/
+bmShow('i406');
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -976,10 +976,10 @@ if ('click' === 'click') {
 
 /*#/#*//*#i392.i393.positioning.js:positioning/base/js.2*/
 bmShow('i392');
-/*#/#*//*#i6.i404.image.js:image/base/js*/
+/*#/#*//*#i6.i408.image.js:image/base/js*/
 
-/*#/#*//*#i404.i405.positioning.js:positioning/base/js.2*/
-bmShow('i404');
+/*#/#*//*#i408.i409.positioning.js:positioning/base/js.2*/
+bmShow('i408');
 /*#/#*//*#i99.i394.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i99');
@@ -1044,7 +1044,7 @@ customName: 1;
 /*#/#*//*#i390.i391.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i396.image.meta:image/meta*/
-name: HNsWaWo.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: huv2i9Y.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i396.i397.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1067,11 +1067,6 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Texto; customName: 1;
 /*#/#*//*#i278.i279.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i402.image.meta:image/meta*/
-name: HNsWaWo.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i402.i403.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i388.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
@@ -1081,6 +1076,11 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Link;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i5.i406.image.meta:image/meta*/
+name: huv2i9Y.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i406.i407.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i6.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 3;
 /*#/#*//*#i6.i40.shape.meta:shape/meta*/
@@ -1101,10 +1101,10 @@ name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i392.i393.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i404.image.meta:image/meta*/
-name: HNsWaWo.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+/*#/#*//*#i6.i408.image.meta:image/meta*/
+name: huv2i9Y.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
-/*#/#*//*#i404.i405.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i408.i409.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
