--- a/NELSON VARGAS/formulario-def.html
+++ b/NELSON VARGAS/formulario-def.html
@@ -254,7 +254,7 @@
         <div class="imgBx">
             <div class="screen1" style="margin-left: 
                 0px; margin-top:0px; cursor: pointer;">
-                <img src="https://i.imgur.com/PNBfVFG.gif"></div>
+                <img src="https://i.imgur.com/yRWsTa2.gif"></div>
 
 
 
