--- a/NELSON VARGAS/cubo.html
+++ b/NELSON VARGAS/cubo.html
@@ -507,15 +507,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 18px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
-/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 229px; height: 63px;
-        -ms-transform: translate(-50%, -50%) translate(3px, 87px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(3px, 87px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(3px, 87px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(3px, 87px) rotate(0deg);
-}
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
 /*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
@@ -527,6 +518,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i4.i390.image.css:image/base/css*/
 #i390 { opacity: 1; }
+/*#/#*//*#i4.i410.text.css:text/base/css*/
+#i410 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 18px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+/*#/#*//*#i410.i411.positioning.css:positioning/base/css.1*/
+#i410 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 53px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
+}
 /*#/#*//*#i4.i396.image.css:image/base/css*/
 #i396 { opacity: 1; }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
@@ -721,6 +721,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(175px, 223px) rotate(0deg);
         transform: translate(0, 0) translate(175px, 223px) rotate(0deg);
 }
+/*#/#*//*#i5.i406.image.css:image/base/css*/
+#i406 { opacity: 1; }
+/*#/#*//*#i406.i407.positioning.css:positioning/base/css.2*/
+#i406 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 169px; height: 45px;
+        -ms-transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
+        transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
+}
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
 }
@@ -730,15 +739,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i5.i406.image.css:image/base/css*/
-#i406 { opacity: 1; }
-/*#/#*//*#i406.i407.positioning.css:positioning/base/css.2*/
-#i406 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 169px; height: 45px;
-        -ms-transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
-        transform: translate(0, 0) translate(63px, 135px) rotate(0deg);
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -831,12 +831,12 @@ url('fonts/') format('svg');
 <div id="i4" class="panel-content-holder">
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
-<!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Hasta el 85% de descuento en membresías.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/Ym0GdaL.jpg"/>
 <!--#/#--><!--#i4.i390.image.html:image/html-->
 <img id="i390" src="https://i.imgur.com/MX7irDr.png"/>
+<!--#/#--><!--#i4.i410.text.html:text/html-->
+<div id="i410">Hasta el 85% de descuento en membresías.</div>
 <!--#/#--><!--#i4.i396.image.html:image/html-->
 <img id="i396" src="https://i.imgur.com/huv2i9Y.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -854,10 +854,10 @@ url('fonts/') format('svg');
 desde el 13 de Mayo al 5 de Junio.</div>
 <!--#/#--><!--#i5.i388.image.html:image/html-->
 <img id="i388" src="https://i.imgur.com/MX7irDr.png"/>
-<!--#/#--><!--#i5.i95.shape.html:shape/html-->
-<div id="i95"></div>
 <!--#/#--><!--#i5.i406.image.html:image/html-->
 <img id="i406" src="https://i.imgur.com/huv2i9Y.png"/>
+<!--#/#--><!--#i5.i95.shape.html:shape/html-->
+<div id="i95"></div>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
@@ -948,6 +948,10 @@ if ('click' === 'click') {
 
 /*#/#*//*#i388.i389.positioning.js:positioning/base/js.2*/
 bmShow('i388');
+/*#/#*//*#i5.i406.image.js:image/base/js*/
+
+/*#/#*//*#i406.i407.positioning.js:positioning/base/js.2*/
+bmShow('i406');
 /*#/#*//*#i95.i384.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i95');
@@ -961,10 +965,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i5.i406.image.js:image/base/js*/
-
-/*#/#*//*#i406.i407.positioning.js:positioning/base/js.2*/
-bmShow('i406');
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -1029,10 +1029,6 @@ customName: 1;
 name: Background;
 /*#/#*//*#i20.i21.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i4.i14.text.meta:text/meta*/
-name: Texto; customName: 1;
-/*#/#*//*#i14.i15.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i130.image.meta:image/meta*/
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
@@ -1043,6 +1039,10 @@ name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i390.i391.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i4.i410.text.meta:text/meta*/
+name: Texto copy; customName: 1;
+/*#/#*//*#i410.i411.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i396.image.meta:image/meta*/
 name: huv2i9Y.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
@@ -1072,15 +1072,15 @@ name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i388.i389.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i95.shape.meta:shape/meta*/
-name: Link;
-/*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i406.image.meta:image/meta*/
 name: huv2i9Y.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i406.i407.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i95.shape.meta:shape/meta*/
+name: Link;
+/*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i6.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 3;
 /*#/#*//*#i6.i40.shape.meta:shape/meta*/
